--- a/Tuan04/build.gradle
+++ b/Tuan04/build.gradle
@@ -22,10 +22,28 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    compileOnly('jakarta.servlet:jakarta.servlet-api:6.1.0')
+    // Jakarta Servlet API
+    providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    // Jakarta Annotations API
+    providedCompile 'jakarta.annotation:jakarta.annotation-api:3.0.0'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    // JSTL (Jakarta Tags Core)
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
+
+    // MariaDB Client
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
+
+    // Jakarta Persistence API
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
+
+    // Hibernate
+    implementation 'org.hibernate:hibernate-core:6.6.1.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
+
+    // JUnit 5
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 test {
